# EnvGuard

./: README.md  pyproject.toml
envguard/: cli.py
envguard.egg-info/: PKG-INFO  SOURCES.txt
